Remove duplicate Deploys 2

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -396,39 +396,32 @@ jobs:
           username: matterbuild
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       
-      - name: Build Docker images for both architectures
+      - name: Build and push AMD64 image
         run: |
-          # Build with default APP_NAME (avoids filesystem issues)
-          make docker-build-parallel-with-tags
-          
-          # Retag with correct namespace for production
-          docker tag mattermost-push-proxy:${APP_VERSION_NO_V:-dev-$(git rev-parse --short HEAD)}-amd64 mattermost/mattermost-push-proxy:${APP_VERSION_NO_V:-dev-$(git rev-parse --short HEAD)}-amd64 
-          docker tag mattermost-push-proxy:${APP_VERSION_NO_V:-dev-$(git rev-parse --short HEAD)}-arm64 mattermost/mattermost-push-proxy:${APP_VERSION_NO_V:-dev-$(git rev-parse --short HEAD)}-arm64
-          docker tag mattermost-push-proxy:${APP_VERSION_NO_V:-dev-$(git rev-parse --short HEAD)} mattermost/mattermost-push-proxy:${APP_VERSION_NO_V:-dev-$(git rev-parse --short HEAD)}
-
-      - name: Push Docker images with unified tags  
+          # Build AMD64 image with correct tag
+          make build-image-amd64-with-tags
+          # Retag with correct namespace
+          docker tag mattermost-push-proxy:master-amd64 mattermost/mattermost-push-proxy:master-amd64
+          docker tag mattermost-push-proxy:master mattermost/mattermost-push-proxy:master
+          # Push AMD64 image
+          docker push mattermost/mattermost-push-proxy:master-amd64
+      
+      - name: Build and push ARM64 image  
         run: |
-          # Get version for proper tagging
-          APP_VERSION_NO_V=$(git describe --abbrev=0 --exact-match --tags 2>/dev/null | sed 's/^v//' || echo "dev-$(git rev-parse --short HEAD)")
-          
-          # Push with correct namespace
-          docker push mattermost/mattermost-push-proxy:${APP_VERSION_NO_V}-amd64
-          docker push mattermost/mattermost-push-proxy:${APP_VERSION_NO_V}-arm64
-          
-          # Create and push multi-arch manifest
-          docker manifest create mattermost/mattermost-push-proxy:${APP_VERSION_NO_V} \
-            --amend mattermost/mattermost-push-proxy:${APP_VERSION_NO_V}-amd64 \
-            --amend mattermost/mattermost-push-proxy:${APP_VERSION_NO_V}-arm64
-          docker manifest push mattermost/mattermost-push-proxy:${APP_VERSION_NO_V}
-
-      - name: Clean up intermediate tags
+          # Build ARM64 image with correct tag
+          make build-image-arm64-with-tags
+          # Retag with correct namespace
+          docker tag mattermost-push-proxy:master-arm64 mattermost/mattermost-push-proxy:master-arm64
+          # Push ARM64 image
+          docker push mattermost/mattermost-push-proxy:master-arm64
+      
+      - name: Create and push multi-arch manifest
         run: |
-          # Clean up both old and new tags
-          APP_VERSION_NO_V=$(git describe --abbrev=0 --exact-match --tags 2>/dev/null | sed 's/^v//' || echo "dev-$(git rev-parse --short HEAD)")
-          docker rmi mattermost-push-proxy:${APP_VERSION_NO_V}-amd64 2>/dev/null || true
-          docker rmi mattermost-push-proxy:${APP_VERSION_NO_V}-arm64 2>/dev/null || true  
-          docker rmi mattermost/mattermost-push-proxy:${APP_VERSION_NO_V}-amd64 2>/dev/null || true
-          docker rmi mattermost/mattermost-push-proxy:${APP_VERSION_NO_V}-arm64 2>/dev/null || true
+          # Create multi-platform manifest for master
+          docker manifest create mattermost/mattermost-push-proxy:master \
+            --amend mattermost/mattermost-push-proxy:master-amd64 \
+            --amend mattermost/mattermost-push-proxy:master-arm64
+          docker manifest push mattermost/mattermost-push-proxy:master
 
   fips-deploy:
     name: FIPS Deploy
@@ -444,20 +437,38 @@ jobs:
         with:
           fetch-depth: 0
       
+      - name: Setup Chainguard Identity
+        uses: chainguard-dev/setup-chainctl@v0.3.2
+        with:
+          identity: ${{ secrets.CHAINGUARD_IDENTITY }}
+      
       - name: Login to Docker Hub
         uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
         with:
           username: matterbuild
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       
-      - name: Build FIPS Docker images for both architectures
-        run: make docker-build-fips-parallel-with-tags
-
-      - name: Push FIPS Docker images with unified tags
-        run: make docker-push-fips-with-tags
-
-      - name: Clean up intermediate FIPS tags
-        run: make cleanup-fips-tags
+      - name: Build and push FIPS AMD64 image
+        run: |
+          # Build FIPS AMD64 image with correct tag
+          make build-image-fips-amd64-with-tags
+          # Push FIPS AMD64 image
+          docker push mattermost/mattermost-push-proxy-fips:master-fips-amd64
+      
+      - name: Build and push FIPS ARM64 image
+        run: |
+          # Build FIPS ARM64 image with correct tag
+          make build-image-fips-arm64-with-tags
+          # Push FIPS ARM64 image
+          docker push mattermost/mattermost-push-proxy-fips:master-fips-arm64
+      
+      - name: Create and push FIPS multi-arch manifest
+        run: |
+          # Create multi-platform manifest for FIPS master
+          docker manifest create mattermost/mattermost-push-proxy-fips:master-fips \
+            --amend mattermost/mattermost-push-proxy-fips:master-fips-amd64 \
+            --amend mattermost/mattermost-push-proxy-fips:master-fips-arm64
+          docker manifest push mattermost/mattermost-push-proxy-fips:master-fips
 
       - name: Create FIPS release
         if: startsWith(github.ref, 'refs/tags/v')
