--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -398,30 +398,33 @@ jobs:
       
       - name: Build and push AMD64 image
         run: |
-          # Build AMD64 image with correct tag
+          # Build AMD64 image with correct tag (using commit SHA)
+          SHORT_SHA=${GITHUB_SHA:0:7}
           make build-image-amd64-with-tags
-          # Retag with correct namespace
-          docker tag mattermost-push-proxy:master-amd64 mattermost/mattermost-push-proxy:master-amd64
-          docker tag mattermost-push-proxy:master mattermost/mattermost-push-proxy:master
+          # Retag with correct namespace using short SHA
+          docker tag mattermost-push-proxy:master-amd64 mattermost/mattermost-push-proxy:${SHORT_SHA}-amd64
+          docker tag mattermost-push-proxy:master mattermost/mattermost-push-proxy:${SHORT_SHA}
           # Push AMD64 image
-          docker push mattermost/mattermost-push-proxy:master-amd64
+          docker push mattermost/mattermost-push-proxy:${SHORT_SHA}-amd64
       
       - name: Build and push ARM64 image  
         run: |
-          # Build ARM64 image with correct tag
+          # Build ARM64 image with correct tag (using commit SHA)
+          SHORT_SHA=${GITHUB_SHA:0:7}
           make build-image-arm64-with-tags
-          # Retag with correct namespace
-          docker tag mattermost-push-proxy:master-arm64 mattermost/mattermost-push-proxy:master-arm64
+          # Retag with correct namespace using short SHA
+          docker tag mattermost-push-proxy:master-arm64 mattermost/mattermost-push-proxy:${SHORT_SHA}-arm64
           # Push ARM64 image
-          docker push mattermost/mattermost-push-proxy:master-arm64
+          docker push mattermost/mattermost-push-proxy:${SHORT_SHA}-arm64
       
       - name: Create and push multi-arch manifest
         run: |
-          # Create multi-platform manifest for master
-          docker manifest create mattermost/mattermost-push-proxy:master \
-            --amend mattermost/mattermost-push-proxy:master-amd64 \
-            --amend mattermost/mattermost-push-proxy:master-arm64
-          docker manifest push mattermost/mattermost-push-proxy:master
+          # Create multi-platform manifest using commit SHA
+          SHORT_SHA=${GITHUB_SHA:0:7}
+          docker manifest create mattermost/mattermost-push-proxy:${SHORT_SHA} \
+            --amend mattermost/mattermost-push-proxy:${SHORT_SHA}-amd64 \
+            --amend mattermost/mattermost-push-proxy:${SHORT_SHA}-arm64
+          docker manifest push mattermost/mattermost-push-proxy:${SHORT_SHA}
 
   fips-deploy:
     name: FIPS Deploy
@@ -450,25 +453,44 @@ jobs:
       
       - name: Build and push FIPS AMD64 image
         run: |
-          # Build FIPS AMD64 image with correct tag
+          # Build FIPS AMD64 image with correct tag (using commit SHA)
+          SHORT_SHA=${GITHUB_SHA:0:7}
           make build-image-fips-amd64-with-tags
+          # Retag with short SHA
+          docker tag mattermost/mattermost-push-proxy-fips:master-fips-amd64 mattermost/mattermost-push-proxy-fips:${SHORT_SHA}-fips-amd64
           # Push FIPS AMD64 image
-          docker push mattermost/mattermost-push-proxy-fips:master-fips-amd64
+          docker push mattermost/mattermost-push-proxy-fips:${SHORT_SHA}-fips-amd64
       
       - name: Build and push FIPS ARM64 image
         run: |
-          # Build FIPS ARM64 image with correct tag
-          make build-image-fips-arm64-with-tags
+          # For FIPS ARM64 builds, we need CGO_ENABLED=1 for FIPS compliance
+          # Use Docker buildx with proper platform specification for cross-compilation
+          SHORT_SHA=${GITHUB_SHA:0:7}
+          
+          # Build FIPS ARM64 image with correct tag (using commit SHA)
+          # Use buildx for proper ARM64 cross-compilation with FIPS
+          docker buildx build --no-cache --pull \
+            --platform linux/arm64 \
+            --build-arg BUILD_IMAGE=cgr.dev/mattermost.com/go-msft-fips:1.24.6 \
+            --build-arg BASE_IMAGE=cgr.dev/mattermost.com/glibc-openssl-fips:15.1 \
+            --build-arg TARGETOS=linux \
+            --build-arg TARGETARCH=arm64 \
+            --tag mattermost/mattermost-push-proxy-fips:${SHORT_SHA}-fips-arm64 \
+            --file docker/Dockerfile.fips \
+            --load \
+            .
+          
           # Push FIPS ARM64 image
-          docker push mattermost/mattermost-push-proxy-fips:master-fips-arm64
+          docker push mattermost/mattermost-push-proxy-fips:${SHORT_SHA}-fips-arm64
       
       - name: Create and push FIPS multi-arch manifest
         run: |
-          # Create multi-platform manifest for FIPS master
-          docker manifest create mattermost/mattermost-push-proxy-fips:master-fips \
-            --amend mattermost/mattermost-push-proxy-fips:master-fips-amd64 \
-            --amend mattermost/mattermost-push-proxy-fips:master-fips-arm64
-          docker manifest push mattermost/mattermost-push-proxy-fips:master-fips
+          # Create multi-platform manifest for FIPS using commit SHA
+          SHORT_SHA=${GITHUB_SHA:0:7}
+          docker manifest create mattermost/mattermost-push-proxy-fips:${SHORT_SHA}-fips \
+            --amend mattermost/mattermost-push-proxy-fips:${SHORT_SHA}-fips-amd64 \
+            --amend mattermost/mattermost-push-proxy-fips:${SHORT_SHA}-fips-arm64
+          docker manifest push mattermost/mattermost-push-proxy-fips:${SHORT_SHA}-fips
 
       - name: Create FIPS release
         if: startsWith(github.ref, 'refs/tags/v')
