--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,7 +96,7 @@ jobs:
         with:
           fetch-depth: 0
       
-      - name: Setup Chainguard
+      - name: Setup Chainguard Identity
         uses: chainguard-dev/setup-chainctl@v0.3.2
         with:
           identity: ${{ secrets.CHAINGUARD_IDENTITY }}
@@ -119,7 +119,7 @@ jobs:
         with:
           fetch-depth: 0
       
-      - name: Setup Chainguard
+      - name: Setup Chainguard Identity
         uses: chainguard-dev/setup-chainctl@v0.3.2
         with:
           identity: ${{ secrets.CHAINGUARD_IDENTITY }}
@@ -138,7 +138,7 @@ jobs:
         with:
           fetch-depth: 0
       
-      - name: Setup Chainguard
+      - name: Setup Chainguard Identity
         uses: chainguard-dev/setup-chainctl@v0.3.2
         with:
           identity: ${{ secrets.CHAINGUARD_IDENTITY }}
@@ -376,10 +376,10 @@ jobs:
 
 
 
-  deploy:
-    name: Deploy
+  deploy-amd64:
+    name: Deploy AMD64
     runs-on: ubuntu-latest
-    needs: [security-scan, build-amd64, build-arm64]
+    needs: [security-scan, build-amd64]
     if: github.repository_owner == 'mattermost' && (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v')) && github.actor != 'dependabot[bot]'
     permissions:
       contents: write
@@ -406,16 +406,56 @@ jobs:
           docker tag mattermost-push-proxy:master mattermost/mattermost-push-proxy:${SHORT_SHA}
           # Push AMD64 image
           docker push mattermost/mattermost-push-proxy:${SHORT_SHA}-amd64
+
+  deploy-arm64:
+    name: Deploy ARM64
+    runs-on: ubuntu-24.04-arm
+    needs: [security-scan, build-arm64]
+    if: github.repository_owner == 'mattermost' && (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v')) && github.actor != 'dependabot[bot]'
+    permissions:
+      contents: write
+      id-token: write
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
+        with:
+          fetch-depth: 0
+      
+      - name: Login to Docker Hub
+        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
+        with:
+          username: matterbuild
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       
       - name: Build and push ARM64 image  
         run: |
-          # Build ARM64 image with correct tag (using commit SHA)
+          # Build ARM64 image with correct tag (using commit SHA) on native ARM64 runner
           SHORT_SHA=${GITHUB_SHA:0:7}
           make build-image-arm64-with-tags
           # Retag with correct namespace using short SHA
           docker tag mattermost-push-proxy:master-arm64 mattermost/mattermost-push-proxy:${SHORT_SHA}-arm64
           # Push ARM64 image
           docker push mattermost/mattermost-push-proxy:${SHORT_SHA}-arm64
+
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    needs: [deploy-amd64, deploy-arm64]
+    if: github.repository_owner == 'mattermost' && (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v')) && github.actor != 'dependabot[bot]'
+    permissions:
+      contents: write
+      id-token: write
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
+        with:
+          fetch-depth: 0
+      
+      - name: Login to Docker Hub
+        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
+        with:
+          username: matterbuild
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       
       - name: Create and push multi-arch manifest
         run: |
