--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -398,14 +398,13 @@ jobs:
       
       - name: Build and push AMD64 image
         run: |
-          # Build AMD64 image with correct tag (using commit SHA)
+          # Build AMD64 image with temp tag for cleanup
           SHORT_SHA=${GITHUB_SHA:0:7}
           make build-image-amd64-with-tags
-          # Retag with correct namespace using short SHA
-          docker tag mattermost-push-proxy:master-amd64 mattermost/mattermost-push-proxy:${SHORT_SHA}-amd64
-          docker tag mattermost-push-proxy:master mattermost/mattermost-push-proxy:${SHORT_SHA}
-          # Push AMD64 image
-          docker push mattermost/mattermost-push-proxy:${SHORT_SHA}-amd64
+          # Retag with temp namespace for later cleanup
+          docker tag mattermost-push-proxy:master-amd64 mattermost/mattermost-push-proxy:temp-${GITHUB_SHA}-amd64
+          # Push temp AMD64 image
+          docker push mattermost/mattermost-push-proxy:temp-${GITHUB_SHA}-amd64
 
   deploy-arm64:
     name: Deploy ARM64
@@ -429,13 +428,13 @@ jobs:
       
       - name: Build and push ARM64 image  
         run: |
-          # Build ARM64 image with correct tag (using commit SHA) on native ARM64 runner
+          # Build ARM64 image with temp tag for cleanup
           SHORT_SHA=${GITHUB_SHA:0:7}
           make build-image-arm64-with-tags
-          # Retag with correct namespace using short SHA
-          docker tag mattermost-push-proxy:master-arm64 mattermost/mattermost-push-proxy:${SHORT_SHA}-arm64
-          # Push ARM64 image
-          docker push mattermost/mattermost-push-proxy:${SHORT_SHA}-arm64
+          # Retag with temp namespace for later cleanup
+          docker tag mattermost-push-proxy:master-arm64 mattermost/mattermost-push-proxy:temp-${GITHUB_SHA}-arm64
+          # Push temp ARM64 image
+          docker push mattermost/mattermost-push-proxy:temp-${GITHUB_SHA}-arm64
 
   deploy:
     name: Deploy
@@ -462,16 +461,44 @@ jobs:
           # Create multi-platform manifest using commit SHA
           SHORT_SHA=${GITHUB_SHA:0:7}
           docker manifest create mattermost/mattermost-push-proxy:${SHORT_SHA} \
-            --amend mattermost/mattermost-push-proxy:${SHORT_SHA}-amd64 \
-            --amend mattermost/mattermost-push-proxy:${SHORT_SHA}-arm64
+            --amend mattermost/mattermost-push-proxy:temp-${GITHUB_SHA}-amd64 \
+            --amend mattermost/mattermost-push-proxy:temp-${GITHUB_SHA}-arm64
           docker manifest push mattermost/mattermost-push-proxy:${SHORT_SHA}
           
-          # Clean up intermediate architecture-specific tags (like production)
-          echo "Cleaning up intermediate architecture-specific tags..."
-          docker rmi mattermost/mattermost-push-proxy:${SHORT_SHA}-amd64 2>/dev/null || true
-          docker rmi mattermost/mattermost-push-proxy:${SHORT_SHA}-arm64 2>/dev/null || true
-          echo "✅ Multi-arch production image available (arch-specific tags removed):"
-          echo "  docker pull mattermost/mattermost-push-proxy:${SHORT_SHA}"
+          echo "✅ Clean unified multi-arch tag: mattermost/mattermost-push-proxy:${SHORT_SHA}"
+          
+          # Cleanup temp tags using Docker Hub API
+          echo "🗑️  Cleaning up temp tags from Docker Hub..."
+          
+          # Delete temp tags using Docker Hub API
+          TEMP_AMD64_TAG="temp-${GITHUB_SHA}-amd64"
+          TEMP_ARM64_TAG="temp-${GITHUB_SHA}-arm64"
+          
+          # Get Docker Hub API token
+          DOCKER_HUB_TOKEN=$(curl -s -X POST \
+            -H "Content-Type: application/json" \
+            -d '{"username": "matterbuild", "password": "${{ secrets.DOCKERHUB_TOKEN }}"}' \
+            https://hub.docker.com/v2/users/login/ | jq -r .token)
+          
+          # Delete AMD64 temp tag
+          curl -X DELETE \
+            -H "Authorization: JWT ${DOCKER_HUB_TOKEN}" \
+            "https://hub.docker.com/v2/repositories/mattermost/mattermost-push-proxy/tags/${TEMP_AMD64_TAG}/" \
+            && echo "✅ Deleted AMD64 temp tag" || echo "⚠️  AMD64 temp tag not found or already deleted"
+          
+          # Delete ARM64 temp tag
+          curl -X DELETE \
+            -H "Authorization: JWT ${DOCKER_HUB_TOKEN}" \
+            "https://hub.docker.com/v2/repositories/mattermost/mattermost-push-proxy/tags/${TEMP_ARM64_TAG}/" \
+            && echo "✅ Deleted ARM64 temp tag" || echo "⚠️  ARM64 temp tag not found or already deleted"
+          
+          echo "✅ Temp tags cleaned up from Docker Hub"
+
+      - name: Create release
+        if: startsWith(github.ref, 'refs/tags/v')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: make github-release
 
   fips-deploy-amd64:
     name: FIPS Deploy AMD64
@@ -500,13 +527,13 @@ jobs:
       
       - name: Build and push FIPS AMD64 image
         run: |
-          # Build FIPS AMD64 image with correct tag (using commit SHA)
+          # Build FIPS AMD64 image with temp tag for cleanup
           SHORT_SHA=${GITHUB_SHA:0:7}
           make build-image-fips-amd64-with-tags
-          # Retag with short SHA
-          docker tag mattermost/mattermost-push-proxy-fips:master-fips-amd64 mattermost/mattermost-push-proxy-fips:${SHORT_SHA}-fips-amd64
-          # Push FIPS AMD64 image
-          docker push mattermost/mattermost-push-proxy-fips:${SHORT_SHA}-fips-amd64
+          # Retag with temp namespace for later cleanup
+          docker tag mattermost/mattermost-push-proxy-fips:master-fips-amd64 mattermost/mattermost-push-proxy-fips:temp-${GITHUB_SHA}-fips-amd64
+          # Push temp FIPS AMD64 image
+          docker push mattermost/mattermost-push-proxy-fips:temp-${GITHUB_SHA}-fips-amd64
 
   fips-deploy-arm64:
     name: FIPS Deploy ARM64
@@ -535,13 +562,13 @@ jobs:
       
       - name: Build and push FIPS ARM64 image
         run: |
-          # Build FIPS ARM64 image with correct tag (using commit SHA) on native ARM64 runner
+          # Build FIPS ARM64 image with temp tag for cleanup
           SHORT_SHA=${GITHUB_SHA:0:7}
           make build-image-fips-arm64-with-tags
-          # Retag with short SHA
-          docker tag mattermost/mattermost-push-proxy-fips:master-fips-arm64 mattermost/mattermost-push-proxy-fips:${SHORT_SHA}-fips-arm64
-          # Push FIPS ARM64 image
-          docker push mattermost/mattermost-push-proxy-fips:${SHORT_SHA}-fips-arm64
+          # Retag with temp namespace for later cleanup
+          docker tag mattermost/mattermost-push-proxy-fips:master-fips-arm64 mattermost/mattermost-push-proxy-fips:temp-${GITHUB_SHA}-fips-arm64
+          # Push temp FIPS ARM64 image
+          docker push mattermost/mattermost-push-proxy-fips:temp-${GITHUB_SHA}-fips-arm64
 
   fips-deploy:
     name: FIPS Deploy
@@ -568,16 +595,38 @@ jobs:
           # Create multi-platform manifest for FIPS using commit SHA
           SHORT_SHA=${GITHUB_SHA:0:7}
           docker manifest create mattermost/mattermost-push-proxy-fips:${SHORT_SHA}-fips \
-            --amend mattermost/mattermost-push-proxy-fips:${SHORT_SHA}-fips-amd64 \
-            --amend mattermost/mattermost-push-proxy-fips:${SHORT_SHA}-fips-arm64
+            --amend mattermost/mattermost-push-proxy-fips:temp-${GITHUB_SHA}-fips-amd64 \
+            --amend mattermost/mattermost-push-proxy-fips:temp-${GITHUB_SHA}-fips-arm64
           docker manifest push mattermost/mattermost-push-proxy-fips:${SHORT_SHA}-fips
           
-          # Clean up intermediate FIPS architecture-specific tags (like production)
-          echo "Cleaning up intermediate FIPS architecture-specific tags..."
-          docker rmi mattermost/mattermost-push-proxy-fips:${SHORT_SHA}-fips-amd64 2>/dev/null || true
-          docker rmi mattermost/mattermost-push-proxy-fips:${SHORT_SHA}-fips-arm64 2>/dev/null || true
-          echo "✅ Multi-arch FIPS production image available (arch-specific tags removed):"
-          echo "  docker pull mattermost/mattermost-push-proxy-fips:${SHORT_SHA}-fips"
+          echo "✅ Clean unified FIPS multi-arch tag: mattermost/mattermost-push-proxy-fips:${SHORT_SHA}-fips"
+          
+          # Cleanup temp FIPS tags using Docker Hub API
+          echo "🗑️  Cleaning up temp FIPS tags from Docker Hub..."
+          
+          # Delete temp FIPS tags using Docker Hub API
+          TEMP_AMD64_TAG="temp-${GITHUB_SHA}-fips-amd64"
+          TEMP_ARM64_TAG="temp-${GITHUB_SHA}-fips-arm64"
+          
+          # Get Docker Hub API token
+          DOCKER_HUB_TOKEN=$(curl -s -X POST \
+            -H "Content-Type: application/json" \
+            -d '{"username": "matterbuild", "password": "${{ secrets.DOCKERHUB_TOKEN }}"}' \
+            https://hub.docker.com/v2/users/login/ | jq -r .token)
+          
+          # Delete FIPS AMD64 temp tag
+          curl -X DELETE \
+            -H "Authorization: JWT ${DOCKER_HUB_TOKEN}" \
+            "https://hub.docker.com/v2/repositories/mattermost/mattermost-push-proxy-fips/tags/${TEMP_AMD64_TAG}/" \
+            && echo "✅ Deleted FIPS AMD64 temp tag" || echo "⚠️  FIPS AMD64 temp tag not found or already deleted"
+          
+          # Delete FIPS ARM64 temp tag
+          curl -X DELETE \
+            -H "Authorization: JWT ${DOCKER_HUB_TOKEN}" \
+            "https://hub.docker.com/v2/repositories/mattermost/mattermost-push-proxy-fips/tags/${TEMP_ARM64_TAG}/" \
+            && echo "✅ Deleted FIPS ARM64 temp tag" || echo "⚠️  FIPS ARM64 temp tag not found or already deleted"
+          
+          echo "✅ Temp FIPS tags cleaned up from Docker Hub"
 
       - name: Create FIPS release
         if: startsWith(github.ref, 'refs/tags/v')
